# esp32-idf-rs

./: .editorconfig  Cargo.toml  metadata.json
crates/esp_system/: Cargo.toml
crates/esp_system/src/: lib.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
script/: bindgen.sh  env.sh
sys/esp_system/: Bindings.toml  Cargo.toml  Makefile
sys/esp_system/src/: bindings.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: build.rs  codegen.rs  fs.rs  lib.rs  util.rs
