[package]
name = "xtask"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bindgen = "0.56"
cargo_metadata = "0.12"
clap = { version = "3.0.0-beta.2", features = ["wrap_help"] }
duct = "0.13"
glob = "0.3"
log = "0.4"
petgraph = "0.5"
pretty_env_logger = "0.4"
seahash = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
termcolor = "1"
toml = "0.5"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.2", default-features = false, features = [
  "registry",
  "fmt",
  "env-filter",
  "tracing-log",
  "chrono",
  "smallvec",
  "parking_lot",
] }
