[package]
name = "esp-idf-system"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
cstr_core = { version = "0.2", optional = true, default-features = false }
esp32-hal = { version = "0.2", optional = true, default-features = false }

esp-idf-system-sys = { path = "../../sys/esp_system" }

[features]
default = ["alloc"]
alloc = ["cstr_core/alloc", "esp32-hal/alloc", "esp32-hal/rt"]
