[package]
name = "simple"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2"
xtensa-lx-rt = { version = "0.5", features = ["lx6"] }

esp-idf-system = { path = "../../crates/esp_system" }
